# attention-visualizer

./: README.md  pyproject.toml
attention_viewer/: __init__.py  __main__.py  data_loader.py  server.py  tokenizer_utils.py
attention_viewer/static/: app.js  styles.css
attention_viewer/templates/: index.html
